<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.smartled.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/nav_scan"
        android:name="com.example.smartled.ui.scan.ScanFragment"
        android:label="Scan"
        tools:layout="@layout/fragment_scan" />
    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.example.smartled.ui.schedule.ScheduleTabbed"
        android:label="Schedule"
        tools:layout="@layout/fragment_schedule_tabbed" />
    <fragment
        android:id="@+id/nav_led"
        android:name="com.example.smartled.ui.led.LedFragment"
        android:label="Led"
        tools:layout="@layout/fragment_led" />
    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.smartled.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.smartled.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.smartled.ui.tools.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.smartled.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.smartled.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>